Refactored CSS to use BEM-style names

--- a/css/app.css
+++ b/css/app.css
@@ -1,26 +1,26 @@
-body{
+.body__main{
     background-color: rgb(112, 128, 144);
 }
 
-h1{
+.header__title{
     text-align: center;
     text-decoration: underline;
 }
 
-.main-container {
+.container__main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.todo-list-container{
+.container__todos{
     width: 400px;
     padding: 30px;
     background-color: rgb(245,245,245);
 }
 
-.todo-item {
+.todo__item {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -31,21 +31,21 @@ h1{
     border-bottom: 1px solid rgb(112, 128, 144);
 }
 
-.todo-form{
+.todo__form{
     padding-top: 30px;
 }
 
-.complete {
+.todo__title--completed {
     text-decoration: line-through;
     color: rgb(128,128,128);
 }
 
-.material-icons.clear{
+.todo__clear-button{
     color: rgb(256,0,0);
     font-size: 20px;
     cursor: pointer;
 }
 
-.material-icons.clear:hover{
+.todo__clear-button:hover{
     color: rgb(139,0,0);
 }
